# CASM

./: .gitignore  CMakeLists.txt  CmdLine.cpp  LICENSE.md  README.md  WASAPICapture.cpp  WASAPICapture.h  WASAPICaptureSharedTimerDriven.cpp  create_wav_output.cpp  read_wav.cpp  record_endpoint_device.cpp  stdafx.h
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  create_wav_output.cpp  play_wav_file.cpp  read_wav.cpp  record_endpoint_device.cpp  record_then_play.cpp
include/CASM/: CASM.hpp  CASMconfig.hpp  config.hpp  device.hpp  device_manager.hpp  file.hpp  stream.hpp  types.hpp
include/CASM/codec/: codec_interface.hpp  pcm.hpp  wave.hpp
include/CASM/core/: buffer.hpp  buffer_base.hpp  buffer_base.inl  circle_buffer.hpp  end_point.hpp  file_base.hpp  wave_properties.hpp
include/CASM/data_stream/: data_stream.hpp  fstream.hpp
include/CASM/device_api/: device_base.hpp  enumerator_base.hpp  enumerator_interface.hpp  wasapi.hpp  wasapi_enumerator.hpp
include/CASM/device_api/wasapi/: enumerator.hpp
include/CASM/device_manager/: device_base.hpp  device_base.inl  device_manager_base.hpp
include/CASM/file_type/: file_wave.hpp
include/CASM/utility/: io.hpp  windows_utilities.hpp
sources/: CASMincludes.hpp  CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_base.hpp  device.cpp  device.hpp  device_base.hpp  device_base.inl  device_manager.cpp  device_manager.hpp  device_manager_base.cpp  device_manager_base.hpp  device_manager_base.inl  device_manager_windows_wasapi.cpp  device_manager_windows_wasapi.hpp  device_windows_wasapi.cpp  device_windows_wasapi.hpp  error_codes.hpp  file.cpp  file.hpp  stream.cpp  stream.hpp  wave_properties.cpp  wave_properties.hpp
sources/codec/: pcm.cpp  wave.cpp
sources/core/: buffer.cpp  buffer_base.cpp  wave_properties.cpp
sources/data_stream/: fstream.cpp
sources/device_api/: enumerator_base.cpp
sources/device_api/wasapi/: device.cpp  device.hpp  enumerator.cpp  functiondiscoverykeys_devpkey.h  initguid.cpp  windows_utilities.cpp  windows_wasapi.hpp
sources/device_manager/: device.cpp  device_manager.cpp  device_manager_base.cpp
sources/device_manager/windows/: device_manager_windows_wasapi.cpp  device_manager_windows_wasapi.hpp  device_windows_wasapi.cpp  device_windows_wasapi.hpp  functiondiscoverykeys_devpkey.h  windows_utilities.cpp  windows_utilities.hpp  windows_wasapi.hpp
sources/file/: file_base.cpp  file_wave.cpp  file_wave.hpp
